[package]
name = "tripwire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_xpbd_3d = "0.4.2"
victimless-bevy = {git = "https://github.com/victimless-crime-cooperative/victimless-bevy.git"}
